2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_configure): Skip AC_CONFIG_LINKS items which
	do not look like DEST:SRC.
	* tests/conflnk3.test: Check for AC_CONFIG_LINKS($computed).

2004-01-07  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/289:
	* automake.in (Automake::Struct::libtool_tag): New attribute.  Define
	it for the language that have a Libtool tag.
	(%libtool_tags): New variable.
	(handle_languages, define_compiler_variable)
	(define_linker_variable): Pass --tag=XXX to libtool if supported.
	(scan_autoconf_traces): Scan for _LT_AC_TAGCONFIG and AC_LIBTOOL_TAGS.
	* tests/libtool3.test, tests/subobj9.test: Check that --tag=XXX is
	output.

2003-01-07  Eric Sunshine  <sunshine@sunshineco.com>  (tiny change)

	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): Add
	config.status.lineno.

2004-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* doc/automake.texi (Rebuilding): Typo.

2004-01-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/Makefile.am (dist_am_DATA): Really add inst-vars.am.

2004-01-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* THANKS: Add Bruce Korb.

2004-01-05  Alexandre Duret-Lutz  <adl@gnu.org>

	Mimic Paul Eggert's changes to Autoconf.
	* Makefile.am (automake, aclocal): Use `chmod a-w', not `chmod -w'.
	* lib/Automake/Makefile.am (Config.pm): Likewise.
	* m4/Makefile.am ($(top_srcdir)/m4/amversion.m4): Likewise.

	* lib/am/inst-vars.am: New file, define am__vpath_adj_setup,
	am__vpath_adj, and am__strip_dir.
	* lib/am/Makefile.am (dist_am_DATA): Add inst-vars.am.
	* lib/am/data.am, lib/am/lisp.am, lib/am/python.am,
	lib/am/scripts.am: Include inst-vars.am, and use $(am__vpath_adj),
	$(am__vpath_adj_setup), and $(am__strip_dir) in install and
	uninstall rules.  This fixes installation of nobase_ files in
	VPATH setups with Sun and OSF1/Tru64 Make.
	* lib/am/libs.am, lib/am/ltlib.am: Include inst-vars.am, and use
	$(am__strip_dir) to simplify install and uninstall rules.